--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -7,16 +7,21 @@
     <title>Pokeapi</title>
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <script defer src="pokedex.js"></script>
 </head>
 
 <body>
     <div class="container">
-        <h1>Pokédex</h1>
+        <div class="header">
+            <img id="logo" src="img/Pokemon_logo.svg">
+            <h1 class="title">- Pokedex -</h1>
+        </div>
         <ol id="pokedex">
-            <li>
 
-            </li>
         </ol>
     </div>
 </body>
