--- a/ejerciciosJs/S1/1.variables/exercise-6.html
+++ b/ejerciciosJs/S1/1.variables/exercise-6.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exercise S1 - 1.6</title>
+
     <script src="exercise-6.js"></script>
-    <title>Document</title>
 </head>
 
 <body>
