--- a/ejerciciosJs/S1/2.operators/exercise-3.html
+++ b/ejerciciosJs/S1/2.operators/exercise-3.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exercise S1 - 2.3</title>
 
-    <script defer src="exercise-2.js"></script>
-    <title>Exercise S1 - 3.2</title>
+    <script src="exercise-3.js"></script>
 </head>
 
 <body>
