--- a/ejerciciosJs/S1/3.arrays/exercise-3.html
+++ b/ejerciciosJs/S1/3.arrays/exercise-3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script defer src="exercise-3.js"></script>
-    <title>Document</title>
+    <title>Exercise S1 - 3.3</title>
 </head>
 
 <body>
