--- a/ejerciciosJs/S1/3.arrays/exercise-5.html
+++ b/ejerciciosJs/S1/3.arrays/exercise-5.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="exercise-5.js"></script>
 
-    <title>Document</title>
+    <title>Exercise S1 - 3.5</title>
 </head>
 
 <body>
