--- a/ejerciciosJs/S1/3.arrays/exercise-6.html
+++ b/ejerciciosJs/S1/3.arrays/exercise-6.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="exercise-6.js"></script>
-    <title>Document</title>
+    <title>Exercise S1 - 3.6</title>
 </head>
 
 <body>
